# lemon-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  example_usage.ipynb  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
client/: auth.py
common/: errors.py  helpers.py  requests.py  settings.py
core/: account.py  models.py  strategy.py
lemon/client/: auth.py
lemon/common/: enums.py  errors.py  helpers.py  requests.py  settings.py
lemon/core/: account.py  instrument.py  market.py  models.py  orders.py  strategy.py
tests/: test_client.py  test_common.py  test_core.py
tests/client/: test_client.py
tests/core/: conftest.py  test_account.py  test_market.py  test_orders.py
