[tool.poetry]
name = "lemon"
version = "0.1.0"
description = ""
authors = ["Patrick Wisotzki <pwisocodes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
PyYAML = "^5.4.1"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
black = "^22.3.0"
jupyter-black = "^0.3.1"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
